--- a/renderer/index.html
+++ b/renderer/index.html
@@ -8,6 +8,14 @@
   <style>
     body {
       line-height: 1.618;
+      margin: 0;
+      color: ghostwhite;
+      background-color: #30343d;
+    }
+
+    input,
+    select {
+      color: #30343d;
     }
 
     webview {
@@ -31,6 +39,24 @@
       font-weight: 600;
     }
 
+    .window {
+      background-color: transparent;
+    }
+
+    .toolbar {
+      background: initial;
+      box-shadow: none;
+    }
+    .toolbar-header {
+      border: none;
+      padding-bottom: .25rem;
+    }
+    .title {
+      color: silver;
+    }
+    .content {
+      height: 100%;
+    }
     .container {
       padding-left: 2rem;
       padding-right: 2rem;
